<resources>
    <string name="app_name">ProductsReview</string>
    <string name="get_xml">Get XML</string>
    <string name="view_data">View Data</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="new_price">New price</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>
